--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
 * {
   font-family: sans-serif;
 }
+
+a {
+  text-decoration: none !important;
+  color: #fff !important;
+}
+
 p {
   font-size: 1.125rem;
   color: #6f6d68;
@@ -74,6 +80,9 @@ h2.title {
   gap: 10px;
 }
 
+.gap5 {
+  gap: 60px;
+}
 .gap1 {
   gap: 40px;
 }
@@ -103,6 +112,11 @@ h2.title {
 .container.container2 {
   padding-top: 47px;
   padding-bottom: 47px;
+}
+
+.container.container5 {
+  padding-top: 64px;
+  padding-bottom: 64px;
 }
 
 .container4 {
@@ -166,6 +180,10 @@ h2.title {
   margin-top: 50px;
 }
 
+.pb64 {
+  padding-bottom: 64px;
+}
+
 .p40 {
   padding-bottom: 40px;
 }
@@ -202,6 +220,10 @@ h2.title {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.line_fo {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
 .iconfull {
   position: relative;
   width: 105px;
@@ -233,4 +255,19 @@ h2.title {
   width: 40px;
   height: 40px;
   transform: translate(-50%, -50%);
+}
+
+.bg-black {
+  background-color: #070911;
+}
+
+.incon-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  background-color: #fff;
+  border-radius: 100px;
+  margin-right: 16px;
 }
